--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start":"node index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "node-telegram-bot-api": "^0.66.0",
+    "dotenv": "^16.4.5",
+    "grammy": "^1.30.0",
     "nodemon": "^3.1.4"
   }
 }
